--- a/nexss-career.html
+++ b/nexss-career.html
@@ -136,17 +136,24 @@ permalink: /nexss-career.html
       <span>Career </span>
       Job Openings
     </div>
+    <div style="font-size:larger;color:#1567c9;">
+      Nexss's vision is a world that everyone is able to write at least basic programs. We develop innovative and
+      evolutionary products. Check our job openings and if you have any questions don't hesitate to contact us.
+    </div>
+    <hr>
     <div>
       <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
 <p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
       <div>
+        <hr>
         <h3>Open Source Software Developer - Intern</h3>
 <p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
 <p>If you would like to:</p>
 <ul>
-<li>Developing innovative <em>open source</em> tools and libraries with: <strong>Nexss Programmer</strong>, <strong>NFT</strong>, <strong>Machine Learning</strong> and more <em>innovative solutions</em></li>
-<li>Create reusable code and components</li>
-<li>Optimize applications for maximum speed and scalability</li>
+<li>Learn new technologies or services based on business demands and industry trends,</li>
+<li>Developing innovative <em>open source</em> tools and libraries with: <strong>Nexss Programmer</strong>, <strong>NFT</strong>, <strong>Machine Learning</strong> and more <em>innovative solutions</em>,</li>
+<li>Create reusable code and components,</li>
+<li>Optimize applications for maximum speed and scalability.</li>
 </ul>
 <h4>Preferred Qualifications</h4>
 <ul>
@@ -154,31 +161,85 @@ permalink: /nexss-career.html
 </ul>
 <h4>Nice to have</h4>
 <ul>
-<li><strong>NodeJS</strong> AND/OR <strong>TypeScript</strong></li>
+<li><strong>NodeJS</strong> and/or <strong>TypeScript</strong> and/or <strong>PHP</strong></li>
+<li><em>AWS</em></li>
 <li><em>Git</em></li>
 <li><em>GraphQL</em></li>
 <li><em>Prisma</em></li>
 <li><em>Docker</em></li>
+<li><em>React</em> or <em>Angular</em></li>
 <li><em>MySQL</em>, <em>SQLite</em></li>
-<li>Basic understanding of HTML, CSS</li>
+<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
 </ul>
 <h4>Benefits</h4>
 <p>Developing innovative tools and applications</p>
+        <hr>
+        <h3>Open Source Art Designer - Intern</h3>
+<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
+<h4>Preferred Qualifications</h4>
+<ul>
+<li><em>Artistic mind</em> and skills</li>
+</ul>
+<h4>Nice to have</h4>
+<ul>
+<li>One of <strong>Photoshop</strong>, <strong>Gimp</strong>, <strong>Krita</strong> or any graphical package of your choice</li>
+<li><strong>Natron</strong></li>
+<li><strong>Blender 3D</strong></li>
+<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
+</ul>
+<h4>Benefits</h4>
+<p>Developing <strong>art</strong> for innovative tools and applications</p>
+        <hr>
+        <h3>Open Source Content &amp; SEO Specialist - Intern</h3>
+<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
+<h4>Preferred Qualifications</h4>
+<ul>
+<li>Clear writing style and editing skills</li>
+</ul>
+<h4>Nice to have</h4>
+<ul>
+<li>SEO</li>
+<li>Optimization for Search Engines</li>
+</ul>
+<h4>Benefits</h4>
+<p>Developing <strong>seo and content</strong> for innovative tools and applications</p>
       </div>
+      <hr>
+      <div>
+        <h5>Intern Information</h5>
+<p>An internship with Nexss.com lasts 3-6 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
+      </div>
+      <hr>
     </div>
     <div>
       <h2>Spontaneous application</h2>
 <p>We are always looking for great talents, so if you don't see any position which match with your qualifications please send us a CV and we will contact you. <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
     </div>
-
     <div>
       <p><br></p>
 <h2>Equal Opportunity Employer</h2>
 <p><em><strong>Nexss.com</strong> is an Equal Opportunity Employer. Qualified applicants are considered for employment without regard to race, color, age, national origin, religion, marital status, sex, sexual orientation, gender identity, gender expression, genetics, disability, protected veteran status or any other basis prohibited by law. We are committed to a diverse and inclusive workplace.</em></p>
     </div>
-
   </div>
-</div>    
+</div>
+<style>
+  h3 {
+    background-color: bisque;
+  }
+
+  h4 {
+    background-color: #eee;
+    color: #523211;
+    font-size: 1em;
+    line-height: 1.1em;
+    font-weight: bold;
+  }
+
+  h5 {
+    background-color: darkseagreen;
+    font-size: larger;
+  }
+</style>    
         <!-- footer -->
     <div class="push"></div>
   </div>
