--- a/pl/open-source-devops-engineer-intern/index21/nexss-career-job-details.html
+++ b/pl/open-source-devops-engineer-intern/index21/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Career / Job Openings - Nexss.com"
-permalink: /pl/nexss-career.html
+title: "Open Source DevOps Engineer - Intern - JOB Openings - nexss.com"
+permalink: /pl/open-source-devops-engineer-intern/index21/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /pl/nexss-career.html
 </script>
 
   <title>
-    Career / Job Openings - Nexss.com
+    Open Source DevOps Engineer - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Check our job Openings at Nexss.com">
+  <meta name="description" content="Open Source DevOps Engineer - Intern - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Career / Job Openings - Nexss.com">
+  <meta property="og:description" content="Open Source DevOps Engineer - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -57,11 +57,11 @@ permalink: /pl/nexss-career.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/nexss-career.html">EN</a>
+                <a href="/en/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-career.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -83,7 +83,7 @@ permalink: /pl/nexss-career.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html"><strong>career</strong></a>
+        <a class="career" href="pl/nexss-career.html">career</a>
 
     </li>
     <li>
@@ -109,7 +109,7 @@ permalink: /pl/nexss-career.html
         <a href="pl/index.html#services">usługi</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-career.html"><strong>career</strong></a>
+        <a class="career" href="pl/nexss-career.html">career</a>
 
     </li>
     <li>
@@ -141,151 +141,44 @@ permalink: /pl/nexss-career.html
   <div class="center">
     <div class="block__title  wow bounceInDown">
       <span>Kariera </span>
-      Oferty Pracy
+      Job Details
     </div>
-    <div style="font-size:larger;color:#1567c9;">
-      <p>Nexss's vision is a world that everyone is able to write at least basic programs. We develop <strong>innovative
-          and
-          evolutionary</strong> products. We will give you more details at the later stage. Check our job openings and
-        if
-        you have
-        any questions don't hesitate to contact us.</p>
-      <p>
-        We are looking for people in any age!</p>
-    </div>
-
     <div>
-
-      <div>
-                <hr>
-        <h3><a href="pl/open-source-software-developer-intern/index1/nexss-career-job-details.html">Open Source Software Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
+            <div>
+        <h1>Open Source DevOps Engineer - Intern</h1>
+        <br>
+        <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
-                <hr>
-        <h3><a href="pl/open-source-art-designer-intern/index2/nexss-career-job-details.html">Open Source Art Designer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html">Open Source Content &amp; SEO Specialist - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-sound-designer-intern/index4/nexss-career-job-details.html">Open Source Sound Designer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-video-editor-intern/index5/nexss-career-job-details.html">Open Source Video Editor - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-software-tester-intern/index6/nexss-career-job-details.html">Open Source Software Tester - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-python-programmer-intern/index7/nexss-career-job-details.html">Open Source Python Programmer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-php-programmer-intern/index8/nexss-career-job-details.html">Open Source PHP Programmer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-nodejs-programmer-intern/index9/nexss-career-job-details.html">Open Source NodeJS Programmer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-typescript-programmer-intern/index10/nexss-career-job-details.html">Open Source TypeScript Programmer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-machine-learning-engineer-intern/index11/nexss-career-job-details.html">Open Source Machine Learning Engineer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-data-scientist-intern/index12/nexss-career-job-details.html">Open Source Data Scientist - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-business-intelligence-developer-intern/index13/nexss-career-job-details.html">Open Source Business Intelligence Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-research-engineer-intern/index14/nexss-career-job-details.html">Open Source Research Engineer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-frontend-vue.js-developer-intern/index15/nexss-career-job-details.html">Open Source Frontend - Vue.js Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-frontend-react-developer-intern/index16/nexss-career-job-details.html">Open Source Frontend - React Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-frontend-angular-developer-intern/index17/nexss-career-job-details.html">Open Source Frontend - Angular Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-backend-java-developer-intern/index18/nexss-career-job-details.html">Open Source Backend - Java Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-powershell-developer-intern/index19/nexss-career-job-details.html">Open Source Powershell Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-project-manager-intern/index20/nexss-career-job-details.html">Open Source Project Manager - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="pl/open-source-devops-engineer-intern/index21/nexss-career-job-details.html">Open Source DevOps Engineer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-              </div>
-
-      <hr>
+        
+                <h4>Preferred Qualifications</h4>
+        <ul>
+<li>docker / kubernetes</li>
+</ul>
+                        <h4>Nice To Have</h4>
+        <ul>
+<li>AWS
+<ul>
+<li>CI/CD,</li>
+<li>cloud experience</li>
+</ul></li>
+</ul>
+                        <h4>Benefits</h4>
+        <ul>
+<li>Developing innovative tools and applications, 
+<ul>
+<li>Learn, build new/innovative technologies or services based on business demands and industry trends.</li>
+</ul></li>
+</ul>
+        
+        <hr>
+        <div>
+          <h5>Intern Information</h5>
+<p>An internship with Nexss.com lasts 2-12 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
+        </div>
+        <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
+<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:jobs@nexss.com">jobs@nexss.com</a></p>
+      </div>
+            <hr>
     </div>
     <div>
       <h2>Spontaneous application</h2>
@@ -339,7 +232,7 @@ permalink: /pl/nexss-career.html
 
         </li>
         <li>
-          <a href="pl/nexss-career.html"><strong>Kariera</strong></a>
+          <a href="pl/nexss-career.html">Kariera</a>
 
         </li>
         <li>
